     WORKER_BOOT_DISK_SIZE_GB; uses default derived from base image if unset.
  5. Upgraded default Spark version to 1.3.1.
  6. Removed datastore-connector installation options and samples; the connector
     has been deprecated since February 17th, 2015. For alternatives see:
     https://groups.google.com/forum/#!topic/gcp-hadoop-announce/D3_OZuqn4_o


1.2.1 - 2015-05-05

  1. Install Java JDK with Spark; this allows spark-sql to correctly run
     out-of-the-box.
  2. New --master_machine_type/-M flag for setting a different master
     machine type vs worker machine type.
  3. Updated default Spark version to 1.3.0; SparkSQL scripts may need
     modifications to use the new DataFrames; see Spark's migration guide:
     http://spark.apache.org/docs/1.3.0/sql-programming-guide.html#migration-guide
  4. Fixed CentOS 7 support.
  5. Added basic support for using local SSDs via --master_local_ssd_count
     and --worker_local_ssd_count.
  6. Removed default zone, trying to get default zone from gcloud instead or
     otherwise requiring an explicit zone setting.
  7. Fixed JobHistory permissions on HDFS.
  8. Added new extension: extensions/bigtable/bigtable_env.sh for deploying
     a cluster with the HBase-compatible connector for Google Cloud Bigtable
     installed.


1.2.0 - 2015-02-26

  1. Fixed reboots on CentOS 7.
  2. Fixed Ambari-plugin support of reusing persistent disks across deployments.
  3. Added support for Apache Flink.
  4. Made all UPLOAD_FILES be relative to the bdutil directory.
  5. Added basic HBase, CDH, and Storm plugins for bdutil.
         ./bdutil -e hbase
         ./bdutil -e cdh
         ./bdutil -e storm
  6. Only symlink the GCS connector for Client nodes.
  7. Fixed memory allocation for Spark executors running on YARN; Created
     extension extensions/spark/spark_on_yarn_env.sh to support Spark
     on YARN without Spark daemons. the combination of spark_env.sh and